2010-03-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/io.txi: Add fileread to documentation.

2010-03-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add gethostname to documentation

2010-03-17  Rik  <octave@nomad.inbox5.com>

	* interpreter/doccheck/mk_undocumented_list: Add fmod,
	octave_tmp_file_name to list of exceptions which are already
	documented.

2011-03-17  Iain Murray  <iain@iainmurray.net>

	* interpreter/system.txi: Remove nprocs and nprocs_conf functions
	from documentation and replace with nproc.

2010-03-16  Rik  <octave@nomad.inbox5.com>

	* interpreter/system.txi: Add nproc and nproc_conf functions to
	documentation.

2010-03-03  Rik  <octave@nomad.inbox5.com>

	* interpreter/matrix.txi: Deprecate is_duplicate_entry.

2010-03-02  Rik  <octave@nomad.inbox5.com>

	* interpreter/stats.txi: Correctly refer to discrete uniform 
	distribution in documentation. 

2011-03-01  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* interpreter/dynamic.txi: Make it clear that <octave/oct.h> is
	a C++ source file and refer to the section where other languages
	are discussed.

	* faq/OctaveFAQ.texi: Major update to FAQ. Whitespace changes.
	Update comments to version 3.4 of Octave. Summarise important
	points of the NEWS file. We no longer have
	stable/testing/unstable, only stable and development. Mention
	newer versions of Windows. Update references to Matlab's latest
	version. Mention that `!' can't be used for shell escapes.
	Update other numbers like number of pages in manual, version
	numbers, dates when things happened, file sizes. Clean out dead
	links. Remove mentions of bugs@octave.org email address. Don't
	say you can get Octave tapes from the FSF. Mention Ubuntu as
	another distribution with Octave packages. Change package names
	in anticipation for the forthcoming 3.4 binary packages. Explain
	nested functions. Hint that classdef might happen in 3.5.
	Mention 3D patches in the OpenGL backend. Clarify Matlab-style