@@ -1,3 +1,8 @@
+2010-03-18  Rik  <octave@nomad.inbox5.com>
+
+	* interpreter/basics.txi: Add gen_doc_cache, get_help_text, 
+	get_help_text_from_file, get_first_help_sentence to documentation.
+
 2010-03-17  Rik  <octave@nomad.inbox5.com>
 
 	* interpreter/io.txi: Add fileread to documentation.
